# Research-Paper-Assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .gitignore  README.md  main.py  requirements.txt
backend/routers/: research_router.py
backend/schemas/: __init__.py  schemas.py
backend/services/: chat_service.py  db_client.py  paper_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  PaperCard.jsx  PdfViewer.jsx  SearchBar.jsx
frontend/src/pages/: LandingPage.jsx  PaperView.jsx  ResultsPage.jsx
